# odbc_monkey

./: .gitignore  JSON_FORMAT.md  README.md  __init__.py  dblib_builder.py  install.ps1  pyproject.toml  rebuild_example.ps1  uninstall.ps1
.github/workflows/: build.yml
example/: README.md  example.DbLib
example/footprints/: C0603_HD.PcbLib  R0603_HD.PcbLib
example/json/: EXAMPLE_CAP_100NF.json  EXAMPLE_RES_10K.json
example/scripts/: validate_example.py
example/symbols/: C_2P_NP.Schlib  R_2P.Schlib
gui/: __init__.py  odbc_viewer.py  pyproject.toml  test_odbc_functions.py  udp_log_viewer.py
native/: .clang-format  CMakeLists.txt  README.md  build.ps1  odbc-monkey.def  setup_build_tools.ps1
native/include/: file_watcher.h  handles.h  json_data_source.h  logger.h  odbc_types.h  version.h.in
native/src/: file_watcher.cpp  json_data_source.cpp  logger.cpp  odbc_exports.cpp  version.rc.in
native/test/: odbc_test.cpp  test_data.json
native/test/test_data/: 0201X104K250CT.json  BLM15PX121SN1D.json  LM317HVT_NOPB.json  test_edge_cases.json
src/py/odbc_monkey/: __main__.py  dblib_builder.py
